--- a/app/src/main/res/values/HelpPosibilities.xml
+++ b/app/src/main/res/values/HelpPosibilities.xml
@@ -22,6 +22,7 @@
         * Editar la lista de sentimientos. \n
         * Editar la lista de drogas.\n
         * Acceder al manual.\n
+        * Chatbot.\n
 
     </string>
 </resources>
