--- a/app/src/main/res/layout/activity_economy.xml
+++ b/app/src/main/res/layout/activity_economy.xml
@@ -42,6 +42,15 @@
                 android:layout_marginBottom="6dp"
                 app:srcCompat="@drawable/btn_economy_box" />
 
+            <ImageButton
+                android:background="@null"
+                android:id="@+id/btnSearchMoney"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
+                app:srcCompat="@drawable/btn_search_money" />
+
 
         </LinearLayout>
     </ScrollView>
