--- a/app/src/main/res/values/HelpPosibilities.xml
+++ b/app/src/main/res/values/HelpPosibilities.xml
@@ -10,6 +10,7 @@
         * Descripción general de cada sustancia.\n
         * Control financiero de ingresos y egresos.\n
         * Control financiero de ahorros.\n
+        * Informe de gastos buscada por nombre: concepto de gasto.\n
         * Registro de como distribuyes tus 24 horas.\n
         * Conteo de como te sientes cada día.\n
         * Gráficas de ingresos y egresos.\n
