generate a chatbot passwork help

--- a/app/src/main/res/values/ChatBOT.xml
+++ b/app/src/main/res/values/ChatBOT.xml
@@ -48,6 +48,7 @@
         name="questionWhoAreMyAdictions">
         <item>cuales son mis adicciones?</item>
         <item>hablame de drogas?</item>
+        <item>háblame de drogas?</item>
         <item>mis drogas?</item>
         <item>historial de consumo?</item>
         <item>que consumo?</item>
