--- a/app/src/main/res/values/drugList.xml
+++ b/app/src/main/res/values/drugList.xml
@@ -6,6 +6,7 @@
         <item>Cannabis</item>
         <item>Cocaína</item>
         <item>Éxtasis</item>
+        <item>FAP</item>
         <item>Juego</item>
         <item>Nicotina</item>
         <item>Pornografia</item>
