--- a/app/src/main/res/values/feelingsList.xml
+++ b/app/src/main/res/values/feelingsList.xml
@@ -21,6 +21,7 @@
         <item>orgullozo</item>
         <item>vergüenza</item>
         <item>drogado</item>
+        <item>soledad</item>
         <item>trabado</item>
         <item>alcoholizado</item>
         <item>satisfecho</item>
